added categories to categories.html page

--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -15,7 +15,7 @@
         <!-- top navbar -->
         <nav class="yellow">
             <div class="nav-wrapper">
-              <a href="{{ url_for('home') }}" class="brand-logo">Task Manager</a>
+              <a href="{{ url_for('home') }}" class="brand-logo pink-text text-darken-4">Task Manager</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('home') }}">Home</a></li>
