--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -1,14 +1,30 @@
 {% extends  "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Categories</h3>
+<h3 class="pink-text text-darken-4 center-align">Categories</h3>
 
 <div class="row"></div>
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_category') }}" class="btn-large light-blue darken-2">
+        <a href="{{ url_for('add_category') }}" class="btn-large pink darken-2">
             Add Category <i class="fa-solid fa-square-plus"></i>
         </a>
     </div>
+</div>
+
+<div class="row">
+    {% for category in categories %}
+    <div class="col s12 m6 l3">
+      <div class="card pink darken-2 center-align">
+        <div class="card-content white-text">
+          <span class="card-title">{{ category.category_name }}</span>
+        </div>
+        <div class="card-action">
+          <a href="#" class="btn green accent-4">Edit</a>
+          <a href="#" class="btn red">Delete</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
 </div>
 
 {% endblock %}
