--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -20,7 +20,19 @@
         </div>
         <div class="card-action">
           <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
-          <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
+          <a href="#modal-{{ category.id }}" class="btn red modal-trigger">Delete</a>
+
+          <!-- Modal -->
+          <div id="modal-{{ category.id }}" class="modal">
+            <div class="modal-content">
+              <h4>Are you sure you want to delete the {{ category.category_name }} genre?</h4>
+              <p class="red-text">This action cannot be undone and will delete all games under this category</p>
+            </div>
+            <div class="modal-footer">
+              <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
+              <a href="{{ url_for('categories') }}" class="modal-close btn green accent-4">Cancel</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
